--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -27,7 +27,7 @@
         <!-- /.login-logo -->
         <div class="card card-outline card-primary">
             <div class="card-header text-center">
-                <a href="../../index2.html" class="h1"><b>P2P </b>Ride Share</a>
+                <a href="#" class="h1"><b>P2P </b>Ride Share</a>
             </div>
             <div class="card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
@@ -71,7 +71,7 @@
                         <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
                     </a>
                     <a href="/Signup" class="btn btn-block btn-danger">
-                        <i class="fab fa-google-plus mr-2"></i> Create an account
+                        <i class="nav-icon fas fa-edit mr-2"></i> Register a new account
                     </a>
                 </div>
                 <!-- /.social-auth-links -->
@@ -79,9 +79,7 @@
                 <p class="mb-1">
                     <a href="forgot-password.html">I forgot my password</a>
                 </p>
-                <p class="mb-0">
-                    <a href="register.html" class="text-center">Register a new membership</a>
-                </p>
+      
             </div>
             <!-- /.card-body -->
         </div>
