Moving onto creating the matching algorithm

--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -3,6 +3,11 @@
 @{
 
     Layout = null;
+
+    if (Globals.logged_in_user != "")
+    {
+        Response.Redirect("/Dashboard");
+    }
 }
 
 
@@ -31,10 +36,19 @@
             </div>
             <div class="card-body">
                 <p class="login-box-msg">Sign in to start your session</p>
-
-                <form action="" method="post">
+                @if (Model.errorMessage.Length > 0)
+                {
+                    <div class="d-flex justify-content-between w-100 flex-wrap">
+                        <div class="mb-3 mb-lg-0">
+                            <div class="alert alert-danger" role="alert">
+                                <strong>@Model.errorMessage</strong>
+                            </div>
+                        </div>
+                    </div>
+                }
+                <form  method="post">
                     <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Email">
+                        <input type="email" name="email" id="email" class="form-control" placeholder="Email">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -42,7 +56,7 @@
                         </div>
                     </div>
                     <div class="input-group mb-3">
-                        <input type="password" class="form-control" placeholder="Password">
+                        <input type="password" name="password" id="password" class="form-control" placeholder="Password">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-lock"></span>
@@ -67,9 +81,7 @@
                 </form>
 
                 <div class="social-auth-links text-center mt-2 mb-3">
-                    <a href="/Dashboard" class="btn btn-block btn-primary">
-                        <i class="fab fa-facebook mr-2"></i> Sign in using Facebook
-                    </a>
+                    
                     <a href="/Signup" class="btn btn-block btn-danger">
                         <i class="nav-icon fas fa-edit mr-2"></i> Register a new account
                     </a>
