--- a/Pages/Dashboard.cshtml
+++ b/Pages/Dashboard.cshtml
@@ -1,6 +1,10 @@
 ﻿@page
 @model p2pRideshare.Pages.DashboardModel
 @{
+    if (Globals.logged_in_user == "")
+    {
+        Response.Redirect("/");
+    }
 }
 
 <div class="row mb-2">
@@ -29,6 +33,14 @@
 
     <!-- Main content -->
     <section class="content">
+
+
+                @if (Globals.user_account_status=="Approved")
+                {
+                    
+                
+
+
         <div class="row">
             <div class="col-md-6">
                 <div class="card card-primary">
@@ -42,6 +54,8 @@
                         </div>
                     </div>
                     <div class="card-body">
+
+                                <form method="POST" enctype="multipart/form-data" asp-page-handler="GetARide">
                         <div class="form-group">
                             <label for="pickupLocation">Pickup Location</label>
                             <input type="text" id="pickupLocation" name="pickupLocation" class="form-control">
@@ -84,18 +98,26 @@
                             <input type="text" id="extraPassengers" class="form-control">
                         </div>
 
+                                    <div class="row">
+                                        <div class="col-12">
+                                            <button type="submit" class="btn btn-primary btn-block">Submit Request</button>
+                                        </div>
+                                    </div>
 
-                                
+                             </form>   
                     </div>
                     <!-- /.card-body -->
                 </div>
                 <!-- /.card -->
             </div>
             <div class="col-md-6">
+
                 <div class="card card-secondary">
+
+                    
                     <div class="card-header">
                         <h3 class="card-title">Offer a ride</h3>
-
+                        
                         <div class="card-tools">
                             <button type="button" class="btn btn-tool" data-card-widget="collapse" title="Collapse">
                                 <i class="fas fa-minus"></i>
@@ -103,6 +125,8 @@
                         </div>
                     </div>
                     <div class="card-body">
+
+                                <form method="POST" enctype="multipart/form-data" asp-page-handler="OfferRide">
                         <div class="form-group">
                             <label for="pickupLocation">Pickup Location</label>
                                     <input type="text" id="pickupLocation" name="pickupLocation" class="form-control">
@@ -187,18 +211,35 @@
                                 </div>
 
                             </div>
+
+                            <div class="row">
+                                        <div class="col-12">
+                                            <button type="submit" class="btn btn-primary btn-block">Submit Offer</button>
+                                        </div>
+                                    </div>
+
+                                </form>
                     </div>
                     <!-- /.card-body -->
+
+                   
                 </div>
                 <!-- /.card -->
             </div>
         </div>
-        <div class="row">
-            <div class="col-12">
-                <a href="#" class="btn btn-secondary">Cancel</a>
-                <input type="submit" value="Create new Project" class="btn btn-success float-right">
-            </div>
-        </div>
+        }
+
+
+                @if (Globals.user_account_status == "Pending Review" || Globals.user_account_status == "Rejected")
+                {
+                    <div class="d-flex justify-content-between w-100 flex-wrap">
+                        <div class="mb-3 mb-lg-0">
+                            <div class="alert alert-danger" role="alert">
+                                <strong>Your account is currently @Globals.user_account_status</strong>
+                            </div>
+                        </div>
+                    </div>
+                }
 
       </section>
     <!-- /.content -->
