--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -155,8 +155,8 @@
         <!-- Main Sidebar Container -->
         <aside class="main-sidebar sidebar-dark-primary elevation-4">
             <!-- Brand Logo -->
-            <a href="../../index3.html" class="brand-link">
-                <img src="~/dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
+            <a href="/" class="brand-link">
+                <img src="~/dist/img/AdminLTELogo.png" alt="P2P Ride Share Logo" class="brand-image img-circle elevation-3" style="opacity: .8">
                 <span class="brand-text font-weight-light">P2P Ride Share</span>
             </a>
 
@@ -165,24 +165,17 @@
                 <!-- Sidebar user (optional) -->
                 <div class="user-panel mt-3 pb-3 mb-3 d-flex">
                     <div class="image">
-                        <img src="~/dist/img/user2-160x160.jpg" class="img-circle elevation-2" alt="User Image">
+                        <img src="~/mugshots/@Globals.user_picture" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
                         <a href="#" class="d-block">@Globals.logged_in_user</a>
                     </div>
+                    
                 </div>
 
-                <!-- SidebarSearch Form -->
-                <div class="form-inline">
-                    <div class="input-group" data-widget="sidebar-search">
-                        <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-                        <div class="input-group-append">
-                            <button class="btn btn-sidebar">
-                                <i class="fas fa-search fa-fw"></i>
-                            </button>
-                        </div>
-                    </div>
-                </div>
+
+
+                
 
                 <!-- Sidebar Menu -->
                 <nav class="mt-2">
@@ -198,6 +191,33 @@
                                 </p>
                             </a>
                              
+                        </li>
+
+                        @if (Globals.user_permission == "Admin")
+                        {
+                            <li class="nav-item">
+                                <a href="/VerifySignUp" class="nav-link">
+                                    <i class="nav-icon fas fa-fingerprint"></i>
+                                    <p>
+                                        User Verification
+
+                                    </p>
+                                </a>
+
+                            </li>
+                        }
+
+                        
+
+                        <li class="nav-item">
+                            <a href="/" class="nav-link">
+                                <i class="nav-icon fas fa-door-open"></i>
+                                <p>
+                                    Sign Out
+
+                                </p>
+                            </a>
+
                         </li>
                     </ul>
                     
