--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -256,8 +256,8 @@
     <script src="~/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/dist/js/adminlte.min.js"></script>
-    <!-- AdminLTE for demo purposes -->
-    <script src="~/dist/js/demo.js"></script>
+    <!-- AdminLTE for demo purposes 
+    <script src="~/dist/js/demo.js"></script> -->
 
     @await RenderSectionAsync("Scripts", required: false)
 </body>
